--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ filelock==3.0.12
 Flask==1.1.2
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.1
@@ -33,3 +34,4 @@ SQLAlchemy==1.3.16
 urllib3==1.25.9
 virtualenv==20.0.17
 Werkzeug==1.0.1
+WTForms==2.3.1
