--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 alembic==1.4.2
 appdirs==1.4.3
+arrow==0.15.5
 autoenv==1.0.0
 autopep8==1.5.1
 awscli==1.18.41
+Babel==2.8.0
 botocore==1.15.41
 click==7.1.1
 colorama==0.4.3
+dateparser==0.7.4
 distlib==0.3.0
 docutils==0.15.2
 ecdsa==0.15
 filelock==3.0.12
 Flask==1.1.2
+Flask-Cors==3.0.8
 Flask-Migrate==2.5.3
+Flask-Moment==0.9.0
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
 gunicorn==20.0.4
@@ -20,17 +26,23 @@ Jinja2==2.11.1
 jmespath==0.9.5
 Mako==1.1.2
 MarkupSafe==1.1.1
+moment==0.9
 psycopg2==2.8.5
+psycopg2-binary==2.8.5
 pyasn1==0.4.8
 pycodestyle==2.5.0
-python-dateutil==2.8.1
+python-dateutil==2.6.0
 python-editor==1.0.4
 python-jose==3.1.0
+pytz==2019.3
 PyYAML==5.3.1
+regex==2020.4.4
 rsa==3.4.2
 s3transfer==0.3.3
 six==1.12.0
 SQLAlchemy==1.3.16
+times==0.7
+tzlocal==2.0.0
 urllib3==1.25.9
 virtualenv==20.0.17
 Werkzeug==1.0.1
