--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ autopep8==1.5.1
 awscli==1.18.41
 Babel==2.8.0
 botocore==1.15.41
+cffi==1.14.0
 click==7.1.1
 colorama==0.4.3
+cryptography==2.9.2
 dateparser==0.7.4
 distlib==0.3.0
 docutils==0.15.2
@@ -15,6 +17,7 @@ ecdsa==0.15
 filelock==3.0.12
 Flask==1.1.2
 Flask-Cors==3.0.8
+Flask-JWT-Extended==3.24.1
 Flask-Migrate==2.5.3
 Flask-Moment==0.9.0
 Flask-Script==2.0.6
@@ -31,6 +34,8 @@ psycopg2==2.8.5
 psycopg2-binary==2.8.5
 pyasn1==0.4.8
 pycodestyle==2.5.0
+pycparser==2.20
+PyJWT==1.7.1
 python-dateutil==2.6.0
 python-editor==1.0.4
 python-jose==3.1.0
