--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 alembic==1.4.2
 appdirs==1.4.3
 arrow==0.15.5
+astroid==2.4.0
+atomicwrites==1.3.0
+attrs==19.3.0
 autoenv==1.0.0
 autopep8==1.5.1
 awscli==1.18.41
@@ -24,18 +27,27 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
 gunicorn==20.0.4
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.1
 jmespath==0.9.5
+lazy-object-proxy==1.4.3
 Mako==1.1.2
 MarkupSafe==1.1.1
+mccabe==0.6.1
 moment==0.9
+more-itertools==8.2.0
+packaging==20.3
+pluggy==0.13.1
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
+py==1.8.1
 pyasn1==0.4.8
 pycodestyle==2.5.0
 pycparser==2.20
 PyJWT==1.7.1
+pyparsing==2.4.7
+pytest==5.4.1
 python-dateutil==2.6.0
 python-editor==1.0.4
 python-jose==3.1.0
@@ -44,11 +56,14 @@ PyYAML==5.3.1
 regex==2020.4.4
 rsa==3.4.2
 s3transfer==0.3.3
-six==1.12.0
+six==1.14.0
 SQLAlchemy==1.3.16
 times==0.7
+toml==0.10.0
 tzlocal==2.0.0
 urllib3==1.25.9
 virtualenv==20.0.17
+wcwidth==0.1.9
 Werkzeug==1.0.1
+wrapt==1.12.1
 WTForms==2.3.1
